# abi_codec

./: .clang-format  .gitignore  CMakeLists.txt  OPTIMIZATION_ANALYSIS.md  README.md  debug_event.mjs  package-lock.json  package.json  test_compile.cpp
.github/workflows/: benchmark.yml
abis/: erc20.json  multicall.json  uniswap_v2_router.json  uniswap_v3_pool.json
benchmarks/: CMakeLists.txt  balanceof_perf_comparison.cpp  benchmark_output.txt  multicall_perf_comparison.cpp  simple_c_test.c  ticklens_perf_comparison.cpp
examples/: CMakeLists.txt  user_usage_clean.cpp
include/abi/: abi.h  protocols.h  utils.h
scripts/: encode.mjs  encode_event.mjs  encode_multicall.mjs  generate_from_abi_json.mjs  multicall3_rpc_test.mjs  multicall_test.mjs  run_benchmarks.sh  test_real_contracts.mjs  ticklens_rpc_test.mjs
tests/: CMakeLists.txt  abi_tests.cpp
